<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:padding="10dp">

      <ImageView
        android:id="@+id/employee_imageview"
        android:src="@{model.photoUrlSmall}"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:contentDescription="@string/employee_image_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105" />

      <TextView
        android:id="@+id/employee_name_label"
        style="@style/WrapWrap"
        android:paddingStart="24dp"
        android:text="@string/employee_name_label"
        app:layout_constraintStart_toEndOf="@+id/employee_imageview"
        app:layout_constraintTop_toTopOf="parent" />

      <TextView
        android:id="@+id/employee_name"
        style="@style/WrapWrap"
        android:paddingStart="24dp"
        android:maxWidth="150dp"
        android:hint="@string/not_available"
        android:text="@{model.fullName, default=`N/A`}"
        app:layout_constraintStart_toEndOf="@+id/employee_name_label"
        app:layout_constraintTop_toTopOf="parent" />

      <TextView
        android:id="@+id/employee_type_label"
        style="@style/TextLabel"
        android:text="@string/employee_role_label"
        app:layout_constraintStart_toEndOf="@+id/employee_imageview"
        app:layout_constraintTop_toBottomOf="@id/employee_name_label" />

      <TextView
        android:id="@+id/employee_type"
        style="@style/TextBody"
        android:hint="@string/not_available"
        android:text="@{model.employeeType, default=`N/A`}"
        app:layout_constraintStart_toEndOf="@+id/employee_name_label"
        app:layout_constraintTop_toBottomOf="@id/employee_name" />

      <TextView
        android:id="@+id/employee_team_label"
        style="@style/TextLabel"
        android:text="@string/employee_team_label"
        app:layout_constraintStart_toEndOf="@+id/employee_imageview"
        app:layout_constraintTop_toBottomOf="@id/employee_type_label" />

      <TextView
        android:id="@+id/employee_team"
        style="@style/TextBody"
        android:hint="@string/not_available"
        android:text="@{model.team, default=`N/A`}"
        app:layout_constraintStart_toEndOf="@+id/employee_name_label"
        app:layout_constraintTop_toBottomOf="@id/employee_type" />

      <TextView
        android:id="@+id/employee_email_label"
        style="@style/TextLabelPortraitBelow"
        android:text="@string/employee_email_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/employee_imageview" />

      <TextView
        android:id="@+id/employee_email"
        style="@style/TextBodyLandscape"
        android:hint="@string/not_available"
        android:text="@{model.emailAddress, default=`N/A`}"
        app:layout_constraintStart_toEndOf="@+id/employee_email_label"
        app:layout_constraintTop_toBottomOf="@id/employee_imageview" />

      <TextView
        android:id="@+id/employee_phnumber_label"
        style="@style/TextLabelPortraitBelow"
        android:text="@string/employee_phone_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/employee_email_label" />

      <TextView
        android:id="@+id/employee_phnumber"
        style="@style/TextBodyLandscape"
        android:hint="@string/not_available"
        android:text="@{model.phoneNumber, default=`N/A`}"
        app:layout_constraintStart_toEndOf="@+id/employee_email_label"
        app:layout_constraintTop_toBottomOf="@id/employee_email" />

      <TextView
        android:id="@+id/employee_biography_label"
        style="@style/TextLabelPortraitBelow"
        android:layout_marginBottom="20dp"
        android:text="@string/employee_biography_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/employee_phnumber_label"
        app:layout_constraintBottom_toBottomOf="parent" />

      <TextView
        android:id="@+id/employee_biography"
        style="@style/TextBodyLandscape"
        android:hint="@string/not_available"
        android:maxWidth="230dp"
        android:maxLines="10"
        android:text="@{model.biography, default=`N/A`}"
        app:layout_constraintStart_toEndOf="@+id/employee_email_label"
        app:layout_constraintTop_toBottomOf="@id/employee_phnumber" />

    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.cardview.widget.CardView>

  <data>

    <variable
      name="model"
      type="com.square.workforce.model.Employee" />

  </data>

</layout>